# reforis-data-collection

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  babel.cfg  pyproject.toml  setup.py
js/: package-lock.json  package.json  webpack.config.js
js/src/: API.js  app.js
js/src/dataCollection/: DataCollection.js  Eula.js
js/src/dataCollection/EULA/: EULA.js  EULAForm.js  EULAModal.css  EULAModal.js
js/src/dataCollection/__tests__/: DataCollection.test.js
js/src/dataCollection/sentinel/: SentinelOptions.js  helpTexts.js
js/src/data_collection/: DataCollection.js
js/src/data_collection/__tests__/: DataCollection.test.js
js/src/licenseAgreement/: LicenseAgreement.js
js/src/licenseAgreement/EULA/: EULA.js  EULAForm.js  EULAModal.js
js/src/licenseAgreement/__tests__/: LicenseAgreement.test.js
js/src/sentinel/: Sentinel.js
js/src/sentinel/SentinelOptions/: SentinelOptions.js  helpTexts.js
js/src/sentinel/SentinelState/: SentinelProxyStateIcon.js  SentinelState.js  SentinelStateBadge.js  SentinelStateIcon.js  SentinelStateRow.js  SentinelStateTable.js
js/src/sentinel/__tests__/: Sentinel.test.js
js/src/utils/: DisabledAlert.js  DisabledIfNotAccepted.js
reforis_data_collection/: __init__.py
reforis_data_collection/translations/: messages.pot
reforis_data_collection/translations/cs/LC_MESSAGES/: messages.po
reforis_data_collection/translations/da/LC_MESSAGES/: messages.po
reforis_data_collection/translations/de/LC_MESSAGES/: messages.po
reforis_sentinel/: __init__.py
reforis_sentinel/translations/: messages.pot
tests/: test_api.py
(+53 files in other folders)
